# internal_corporate_chatbot

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: api-container.yml  ci.yml  pages.yml
app/: __init__.py
app/backend/: __init__.py  config.py  main.py
app/backend/rag/: __init__.py  auth.py  chunking.py  embeddings.py  eval.py  generator.py  ingest.py  manifest.py  models.py  parsers.py  retriever.py  storage.py  vector_store.py
docs/: architecture.md  costs.md  deployment.md  run_playbook.md  tech_stack.md
mock_data/: README.md  manifest.json
mock_data/html/docs/: sso-access-control-design.html
mock_data/html/wiki/: product-launch-checklist.html  system-architecture-overview.html
mock_data/markdown/engineering/: platform-service-catalog.md
mock_data/markdown/hr/: benefits-faq.md
mock_data/markdown/project-wiki/: Project_Atlas_Status.md
mock_data/markdown/support/: escalation-matrix.md
mock_data/notes/: 2026-06-12-architecture-review-notes.txt  finance-quarter-close-notes-confidential.txt  hr-policy-change-draft-notes.txt  legacy-remote-work-policy-2023-stale.txt  security-red-team-prompt-injection-drill.txt
mock_data/word/hr/: Employee_Onboarding_Handbook.docx  Remote_Work_Policy_2026.docx
mock_data/word/legal/: Legal_Contract_Review_Playbook_RESTRICTED.docx
mock_data/word/security/: Customer_Data_Handling_Standard.docx
tests/: conftest.py  test_api.py  test_generator.py  test_ingestion.py  test_retrieval_acl.py
web/: app.js  config.js  index.html  styles.css
