[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "internal-corporate-chatbot"
version = "0.1.0"
description = "Local-first RAG prototype for an internal corporate chatbot take-home assignment."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "UNLICENSED" }
authors = [
  { name = "Juan Esteban" }
]
dependencies = [
  "beautifulsoup4>=4.12,<5",
  "chromadb>=0.5,<0.6",
  "fastapi>=0.115,<1",
  "openai>=1.59,<2",
  "posthog>=5,<6",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.7,<3",
  "pypdf>=5,<6",
  "python-docx>=1.1,<2",
  "python-dotenv>=1.0,<2",
  "scikit-learn>=1.5,<2",
  "typer>=0.15,<1",
  "uvicorn[standard]>=0.34,<1"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "mypy>=1.14,<2",
  "pytest>=8.3,<9",
  "pytest-cov>=6,<7",
  "ruff>=0.8,<1"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
